@@ -1,4 +1,6 @@
 Version 1.51:
+	- Added a caching layer for reading in the matrix, to reduce the
+		amount of disk IO required by an MPI grid (thanks Greg Childers)
 	- Fixed a potential 32-bit overflow in the hashtable code, that could
 		occur for extremely large problems (thanks Paul Zimmermann)
 	- Fixed a line sieve initialization problem (thanks Ilya Popovyan)
